Fix "buy me a coffee" button alignment

--- a/popup/style/style.css
+++ b/popup/style/style.css
@@ -59,5 +59,10 @@ footer {
     text-decoration: none;
 }
 .buy-me-a-coffee-button {
+    /* Correct size for button */
     width: 135px !important;
+    /* Center button */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
